# zoo-tron

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h
Source/dsp/: EnvelopeFollower.h  Lfo.h  MuTronEngine.h  StateVariableFilter.h  Vactrol.h
tools/: analyze.cpp  engine_test.cpp  render.cpp  wav.h
